objects/GDT_CustomSettings_TZone_Lang_Currency__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDT_CustomSettings_TZone_Lang_Currency</label>
    <listViews>
        <fullName>GDT</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Country__c</columns>
        <columns>Currency__c</columns>
        <columns>Language__c</columns>
        <columns>Locale__c</columns>
        <columns>Timezone__c</columns>
        <filterScope>Everything</filterScope>
        <label>GDT</label>
        <language>en_US</language>
        <sharedTo>
            <group>GDT_Group</group>
        </sharedTo>
    </listViews>
</CustomObject>